WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143151
Calling crypto.webkitSubtle.generateKey causes page memory to never be released
https://bugs.webkit.org/show_bug.cgi?id=143151
Summary
Calling crypto.webkitSubtle.generateKey causes page memory to never be released
Alexey Proskuryakov
Reported
2015-03-27 13:55:53 PDT
Using crypto.webkitSubtle.generateKey for RSA always causes a world leak.
rdar://problem/18940687
Attachments
proposed fix
(1.66 KB, patch)
2015-03-27 13:59 PDT
,
Alexey Proskuryakov
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2015-03-27 13:59:08 PDT
Created
attachment 249605
[details]
proposed fix
Tim Horton
Comment 2
2015-03-27 14:01:10 PDT
Comment on
attachment 249605
[details]
proposed fix It would be nice if there were smart pointers here!
Alexey Proskuryakov
Comment 3
2015-03-27 14:05:08 PDT
Committed <
https://trac.webkit.org/r182077
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug